--- a/server/test.html
+++ b/server/test.html
@@ -1,90 +1,68 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File Upload and Post Creation</title>
+  <title>Email Confirmation</title>
   <style>
-    /* Basic styling for the form */
     body {
       font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
     }
-    form {
-      max-width: 400px;
-      margin: 0 auto;
+
+    .container {
+      max-width: 600px;
+      margin: 30px auto;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
     }
-    label {
+
+    .header-img {
       display: block;
-      margin-top: 10px;
+      max-width: 50%;
+      margin: auto;
+      margin-bottom: 20px;
     }
-    input[type="text"], input[type="file"] {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-      box-sizing: border-box;
+
+    h1 {
+      color: #0066cc;
+      margin-bottom: 20px;
     }
-    button {
-      background-color: #4CAF50;
+
+    p {
+      margin: 15px 0;
+    }
+
+    .btn {
+      display: inline-block;
+      background-color: #0066cc;
       color: white;
+      border-radius: 5px;
       padding: 10px 20px;
-      border: none;
-      cursor: pointer;
+      text-decoration: none;
+      margin-right: 10px;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: #0052a3;
     }
   </style>
 </head>
 <body>
-  <h1>File Upload and Post Creation</h1>
-  <form id="uploadForm" enctype="multipart/form-data">
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email" required>
-
-    <label for="content">Content:</label>
-    <input type="text" id="content" name="content" required>
-
-    <label for="file">Upload File:</label>
-    <input type="file" id="file" name="file" required multiple>
-
-    <button type="submit">Upload and Create Post</button>
-  </form>
-
-  <script>
-    // JavaScript to handle the form submission
-    const uploadForm = document.getElementById('uploadForm');
-
-    uploadForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const email = document.getElementById('email').value;
-      const content = document.getElementById('content').value;
-      const files = document.getElementById('file').files;
-
-      const formData = new FormData();
-      formData.append('email', email);
-      formData.append('content', content);
-
-      // Append each selected file to the FormData
-      for (const file of files) {
-        formData.append('files', file);
-      }
-
-      try {
-        const response = await fetch('http://localhost:8000/upload-post', {
-          method: 'POST',
-          body: formData,
-        });
-
-        const data = await response.json();
-
-        if (response.ok) {
-          alert('File uploaded and post created successfully!');
-        } else {
-          alert(data.error || 'Failed to upload files and create post.');
-        }
-      } catch (error) {
-        console.error(error);
-        alert('An error occurred while uploading files and creating the post.');
-      }
-    });
-  </script>
+  <div class="container">
+    <img class="header-img" src="https://we-school.vercel.app/logo.jpg" alt="Header Image" />
+    <h1>Email Confirmation</h1>
+    <p>Hello,</p>
+    <p>Please click on the button below to confirm your email:</p>
+    <a class="btn" href="${confirmationLink}">Confirm Email</a>
+    <p>If the button above does not work, you can also click on the link below:</p>
+    <a href="${confirmationLink}">${confirmationLink}</a>
+    <p>Best regards,</p>
+    <p>We School Mansoura</p>
+  </div>
 </body>
 </html>
